--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container d-flex align-items-center">
         <div>
             <h1 class="mb-0">MAIN COPY</h1>
-            <span>Lorem ipsum dolor sit amet</span>
+            <span>善と悪の究極について</span>
             <a href="contact/index.html" class="btn btn-outline-warning btn-lg text-white rounded-0">お問い合わせ</a>
         </div>
     </div>
